@@ -55,6 +55,8 @@ Version 3.4.0 - DEV
    Patch provided by Keith Johnson.
  - Pass ONLINE_JUDGE and DOMJUDGE directives to submissions.
  - Add support for new languages: Python3, Ada, Fortran, Lua, Scala.
+ - Checktestdata logical operators are now '&&' and '||'. The old '&' and
+   '|' are obsoleted and will be removed in the next major release.
 
 Version 3.3.0 - 29 May 2012
 ---------------------------
